@@ -113,8 +113,7 @@ bool CGUIWindowVideoActors::GetDirectory(const CStdString &strDirectory, CFileIt
           pItem->SetThumbnailImage(strThumb);
         pItem->m_fRating = movie.m_fRating;
         pItem->m_stTime.wYear = movie.m_iYear;
-        if (!movie.m_bWatched)
-          pItem->SetOverlayImage(CGUIListItem::ICON_OVERLAY_UNWATCHED);
+        pItem->SetOverlayImage(CGUIListItem::ICON_OVERLAY_UNWATCHED,movie.m_bWatched);
         m_vecItems.Add(pItem);
       }
     }
